resources/clair/production/clair.matcher.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    haproxy.router.openshift.io/disable_cookies: 'true'
  labels:
    service: clair-matcher
  name: clair-matcher-production 
spec:
  host: clair.quay.io
  path: /matcher
  to:
    kind: Service
    name: clair-matcher
    weight: 100
  port:
    targetPort: http-transport
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
