resources/clair/production/clair.notifier.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
  labels:
    service: clair-notifier
  name: clair-notifier-production 
spec:
  host: clair.quay.io
  path: /notifier
  to:
    kind: Service
    name: clair-notifier
    weight: 100
  port:
    targetPort: http-transport
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
